implemented get rates rpc
